// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > Radio baseVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group radio-group-demo"
    role="radiogroup"
  >
    <!---->
    
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="3"
      />
      <div
        class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
            fill="currentColor"
          />
        </svg>
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <div
          class="t-radio__description"
          style=""
        >
          描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
        </div>
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio cardVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group theme-card"
    role="radiogroup"
  >
    <!---->
    
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
            fill="currentColor"
          />
        </svg>
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio customVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio-group"
    data-v-bb126958=""
    role="radiogroup"
  >
    <!---->
    
    
    <view
      class="card card--active"
      data-v-bb126958=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-bb126958=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-bb126958=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-bb126958=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    
    
  </div>
  <view
    class="demo-desc"
    data-v-bb126958=""
    style="margin: 24px 16px 16px;"
  >
    横向卡片单选框
  </view>
  <div
    class="t-radio-group horizontal-box"
    data-v-bb126958=""
    role="radiogroup"
  >
    <!---->
    
    
    <view
      class="card card--active"
      data-v-bb126958=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-bb126958=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-bb126958=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-bb126958=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-bb126958=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    
    
  </div>
  
</div>
`;

exports[`Radio > Radio horizontalVue demo works fine 1`] = `
<div
  class="t-radio-group box"
  role="radiogroup"
>
  <!---->
  
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Radio > Radio iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-172d1b62=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check t-radio__icon-wrap"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="check"
        >
          <path
            d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-172d1b62=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <div
        class="t-radio__icon-dot"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Radio 单选框
  </h1>
  <p
    class="summary"
  >
    用于在预设的一组选项中执行单项选择，并呈现选择结果。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纵向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group radio-group-demo"
          role="radiogroup"
        >
          <!---->
          
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="3"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        横向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group box"
        role="radiogroup"
      >
        <!---->
        
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <div
              class="t-radio__icon-circle"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <div
              class="t-radio__icon-circle"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="3"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group radio-group-demo space"
        data-v-af6326fa=""
        role="radiogroup"
      >
        
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-已选
            </span>
            <!---->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
          >
            <div
              class="t-radio__icon-circle t-radio__icon-circle--disabled"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-默认
            </span>
            <!---->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        勾选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-172d1b62=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-radio__icon-wrap"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="check"
            >
              <path
                d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-172d1b62=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <div
            class="t-radio__icon-dot"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        勾选显示位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-7e36f9df=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      <div
        class="t-radio t-radio--right t-radio--block block"
        data-v-7e36f9df=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--right"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏单选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group theme-card"
          role="radiogroup"
        >
          <!---->
          
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框尺寸规格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio-group"
        data-v-bb126958=""
        role="radiogroup"
      >
        <!---->
        
        
        <view
          class="card card--active"
          data-v-bb126958=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-bb126958=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-bb126958=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-bb126958=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        
        
      </div>
      <view
        class="demo-desc"
        data-v-bb126958=""
        style="margin: 24px 16px 16px;"
      >
        横向卡片单选框
      </view>
      <div
        class="t-radio-group horizontal-box"
        data-v-bb126958=""
        role="radiogroup"
      >
        <!---->
        
        
        <view
          class="card card--active"
          data-v-bb126958=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-bb126958=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-bb126958=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-bb126958=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-bb126958=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Radio > Radio placementVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-7e36f9df=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--right t-radio--block block"
    data-v-7e36f9df=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--right"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio statusVue demo works fine 1`] = `
<div
  class="t-radio-group radio-group-demo space"
  data-v-af6326fa=""
  role="radiogroup"
>
  
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-已选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
    >
      <div
        class="t-radio__icon-circle t-radio__icon-circle--disabled"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-默认
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
  <!---->
</div>
`;
